Add calendar for setting due dates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 
     <string name="task_label">Task Name</string>
     <string name="type_label">Type</string>
+    <string name="date_label">Due Date</string>
 </resources>
