--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="task_label">Task Name</string>
     <string name="type_label">Type</string>
     <string name="date_label">Due Date</string>
+    <string name="completion_label">Completion</string>
+
+    <string-array name="completion_statuses">
+        <item>To-do</item>
+        <item>In Progress</item>
+        <item>Complete!</item>
+    </string-array>
 </resources>
