--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="menu_tasks">Tasks</string>
     <string name="menu_about">About</string>
+    <string name="menu_random">New Ideas</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
@@ -16,6 +17,9 @@
     <string name="type_label">Type</string>
     <string name="date_label">Due Date</string>
     <string name="completion_label">Completion</string>
+
+    <string name="price_label">Price:</string>
+    <string name="difficulty_label">Difficulty:</string>
 
     <string-array name="completion_statuses">
         <item>To-do</item>
