--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,29 @@
     <string name="setting2">Budget</string>
     <string name="setting3">Difficulty</string>
 
+    <string-array name="types">
+        <item>All</item>
+        <item>Busywork</item>
+        <item>Charity</item>
+        <item>Cooking</item>
+        <item>DIY</item>
+        <item>Education</item>
+        <item>Music</item>
+        <item>Recreational</item>
+        <item>Relaxation</item>
+        <item>Social</item>
+    </string-array>
+    <string-array name="type_values">
+        <item>all</item>
+        <item>busywork</item>
+        <item>charity</item>
+        <item>cooking</item>
+        <item>dIY</item>
+        <item>education</item>
+        <item>music</item>
+        <item>recreational</item>
+        <item>relaxation</item>
+        <item>social</item>
+    </string-array>
+
 </resources>
